--- a/css/style.scss
+++ b/css/style.scss
@@ -15,20 +15,22 @@ img {
 }
 
 audio {
-  padding-top: 6px;
-  width: 120px;
+  padding-top: 5px;
+  width: 170px;
   height: 30px;
-
 }
 
 table {
   border: 1px solid white;
   color: white;
   text-align: center;
-  width: 300px;
+  width: 320px;
   border-collapse: collapse;
   th,td {
     border: 1px solid white;
+  }
+  tr td:last-child {
+    padding: 0 20px;
   }
 
 }
