--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,9 @@ main {
 img {
   width: 70%;
   margin-bottom: 30px;
+  @media screen and (min-width: 400px) {
+    width: 40vh;
+  }
 }
 
 audio {
